
== Version 1.2.2 ==
* Released ...
* Fixed issue with Gallery Post-Format being used when the `gallery` shortcode is not used.
* Corrected i18n code for EXIF data
* Additional i18n code corrections and enhancements
* Fixed undefined offset when there is no image found in post
* Add documentation to the `first_linked_image` function

/** ------------------------------------------------------------------------- */
== Version 1.2.1 ==
* Released August 2013
* Removed `translation-ready` tag

/** ------------------------------------------------------------------------- */
== Version 1.2 ==
* Released August 2013

= Code =
* Added display of featured image centered at full size in single standard post format view
* Added full `featured_image` method call to single view of post formats audio, chat, quote, and status
* Added `get_author_description` method in Authors class
* Added filtered `comment_form_required_field_glyph` method in Comments class
* Added many new filters - see http://opusprimus.com/under-the-page/hooks-filters/ or `hooks-filters.txt` for a current list
* Added sanity conditional check to eliminate potential duplicate body classes
* Added `is_single` conditional test before enqueue of Comment Tabs script
* Added post to post navigation in single view
* Added conditional check if not post password required when displaying comments
* Added conditional for showing the page byline details
* Added `show_page_byline` default and set as false
* Changed `the_post_thumbnail` to use parameters which are set in the call to `OpusPrimusImage::featured_image`
* Changed post thumbnail on pages to full size image and align to the center
* Changed comment fields into an unordered list
* Changed `meta-tags` container from `p` to `div` (adjusted CSS as needed)
* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`
* Check for long post titles in breadcrumbs and trim as needed